Dois idiomas feitos; tão feios mas tão bonito

--- a/index.html
+++ b/index.html
@@ -7,38 +7,39 @@
 		<meta name="author" content="Bernardo Faria, Samuel Vicente, Sofia Martins">
 
     <link rel="shortcut icon" type="image/ico" href="img/favicon.ico"/>
-    <link rel="stylesheet" href="index-style.css">
+    <!-- <link rel="stylesheet" href="index-style.css"> -->
 
     <!-- d3 js local run -->
     <script src="D3/d3.js" charset="utf-8"></script>
 
 		<!-- Our JS -->
     <script src="js/lineplot.js" type="module"></script>
+    <script src="js/barchart.js" type="module"></script>
 	</head>
 
 	<body>
 		<h1>Music Evolution</h1>
         <section id="grid">
           <div id="search-box" class="grid-cell">
-            <p class="idiom-title">Title</p>
+            <p class="idiom-title"></p>
           </div>
-          <div id="line-plot" class="grid-cell">
-            <p class="idiom-title">Title</p>
+          <div id="lineplot" class="grid-cell">
+            <p class="idiom-title"></p>
           </div>
           <div id="bubblemap" class="grid-cell">
-            <p class="idiom-title">Title</p>
+            <p class="idiom-title"></p>
           </div>
           <div id="lolipop" class="grid-cell">
-            <p class="idiom-title">Title</p>
+            <p class="idiom-title"></p>
           </div>
           <div id="barchart" class="grid-cell">
-            <p class="idiom-title">Title</p>
+            <p class="idiom-title"></p>
           </div>
           <div id="network" class="grid-cell">
-            <p class="idiom-title">Title</p>
+            <p class="idiom-title"></p>
           </div>
           <div id="sankey" class="grid-cell">
-            <p class="idiom-title">Title</p>
+            <p class="idiom-title"></p>
           </div>
         </section>
 	</body>
