--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   
 	<body>
     <h1>Music Evolution</h1>
-    <select id ="selectbutton">
-    </select>
+    <div id ="selectbutton" name="genre">
+    </div>
         <section id="grid">
           <div id="search-box" class="grid-cell">
             <p class="idiom-title"></p>
