--- a/index.html
+++ b/index.html
@@ -11,36 +11,27 @@
 
     <!-- d3 js local run -->
     <script src="D3/d3.js" charset="utf-8"></script>
+    <!-- d3 for map -->
+    <script src="https://d3js.org/d3-geo.v2.min.js"></script>
+    <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+    <script src="https://d3js.org/d3-geo-projection.v2.min.js"></script>
 
 		<!-- Our JS -->
     <script src="js/lineplot.js" type="module"></script>
     <script src="js/barchart.js" type="module"></script>
+    <script src="js/bubblemap.js" type="module"></script>
 	</head>
 
 	<body>
 		<h1>Music Evolution</h1>
         <section id="grid">
-          <div id="search-box" class="grid-cell">
-            <p class="idiom-title"></p>
-          </div>
-          <div id="lineplot" class="grid-cell">
-            <p class="idiom-title"></p>
-          </div>
-          <div id="bubblemap" class="grid-cell">
-            <p class="idiom-title"></p>
-          </div>
-          <div id="lolipop" class="grid-cell">
-            <p class="idiom-title"></p>
-          </div>
-          <div id="barchart" class="grid-cell">
-            <p class="idiom-title"></p>
-          </div>
-          <div id="network" class="grid-cell">
-            <p class="idiom-title"></p>
-          </div>
-          <div id="sankey" class="grid-cell">
-            <p class="idiom-title"></p>
-          </div>
+          <div id="search-box" class="grid-cell"></div>
+          <div id="lineplot" class="grid-cell" ></div>
+          <!--div id="bubblemap" class="grid-cell"></div-->
+          <div id="lolipop" class="grid-cell"></div>
+          <div id="barchart" class="grid-cell"></div>
+          <div id="network" class="grid-cell"></div>
+          <div id="sankey" class="grid-cell"></div>
         </section>
 	</body>
 </html>
