Added css (empty); trying bubble map

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="author" content="Bernardo Faria, Samuel Vicente, Sofia Martins">
 
     <link rel="shortcut icon" type="image/ico" href="img/favicon.ico"/>
-    <!-- <link rel="stylesheet" href="index-style.css"> -->
+    <!-- <link rel="stylesheet" href="style.css"/> -->
 
     <!-- d3 js local run -->
     <script src="D3/d3.js" charset="utf-8"></script>
@@ -24,16 +24,15 @@
   
 	<body>
     <h1>Music Evolution</h1>
-    <div id ="selectbutton" name="genre" >
-    </div>
-        <section id="grid">
-          <div id="search-box" class="grid-cell"></div>
-          <div id="lineplot" class="grid-cell" ></div>
-          <!--div id="bubblemap" class="grid-cell"></div-->
-          <div id="lolipop" class="grid-cell"></div>
-          <div id="barchart" class="grid-cell"></div>
-          <div id="network" class="grid-cell"></div>
-          <div id="sankey" class="grid-cell"></div>
-        </section>
+    <div id ="selectbutton" name="genre"></div>
+    <section id="grid">
+      <div id="search-box" class="grid-cell"></div>
+      <div id="lineplot" class="grid-cell"></div>
+      <div id="bubblemap" class="grid-cell"></div>
+      <div id="lolipop" class="grid-cell"></div>
+      <div id="barchart" class="grid-cell"></div>
+      <div id="network" class="grid-cell"></div>
+      <div id="sankey" class="grid-cell"></div>
+    </section>
 	</body>
 </html>
