--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 
     <!-- d3 js local run -->
     <script src="D3/d3.js" charset="utf-8"></script>
+    <!-- d3 topojson for map -->
+    <script src="D3/topojson.js" charset="utf-8"></script>
     <!-- d3 for map -->
-    <script src="https://d3js.org/d3-geo.v2.min.js"></script>
-    <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
-    <script src="https://d3js.org/d3-geo-projection.v2.min.js"></script>
+    <!-- <script src="https://d3js.org/d3-geo.v2.min.js"></script> -->
+    <!-- <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script> -->
+    <!-- <script src="https://d3js.org/d3-geo-projection.v2.min.js"></script> -->
 
 		<!-- Our JS -->
     <script src="js/lineplot.js" type="module"></script>
