Added interaction map -> bar; missing the other way around

--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 
 		<!-- Our JS -->
     <script src="js/lineplot.js" type="module"></script>
-    <script src="js/barchart.js" type="module"></script>
-    <script src="js/bubblemap.js" type="module"></script>
+    <!-- <script src="js/barchart.js" type="module"></script> -->
+    <!-- <script src="js/bubblemap.js" type="module"></script> -->
+    <script src="js/main.js" type="module"></script>
 	</head>
   
 	<body>
