Hovering on map and bar; started CSS

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="author" content="Bernardo Faria, Samuel Vicente, Sofia Martins">
 
     <link rel="shortcut icon" type="image/ico" href="img/favicon.ico"/>
-    <!-- <link rel="stylesheet" href="style.css"/> -->
+    <link rel="stylesheet" href="style.css"/>
 
     <!-- d3 js local run -->
     <script src="D3/d3.js" charset="utf-8"></script>
@@ -16,8 +16,8 @@
 
 		<!-- Our JS -->
     <script src="js/lineplot.js" type="module"></script>
-    <!-- <script src="js/barchart.js" type="module"></script> -->
-    <!-- <script src="js/bubblemap.js" type="module"></script> -->
+    <script src="js/barchart.js" type="module"></script>
+    <script src="js/bubblemap.js" type="module"></script>
     <script src="js/main.js" type="module"></script>
 	</head>
   
