All genres on lineplot; changed font

--- a/index.html
+++ b/index.html
@@ -19,12 +19,17 @@
     <script src="js/lineplot.js" type="module"></script>
     <script src="js/barchart.js" type="module"></script>
     <script src="js/bubblemap.js" type="module"></script>
+
+    <!--import font-->
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
+    </style>
 	</head>
   
 	<body>
-    <h1>Music Evolution</h1>
+    <h1 class="title" style="text-align:center" >Music Evolution</h1>
     <div id ="selectbutton" name="genre"></div>
-    <section id="grid">
+    <section class="title" id="grid">
       <div id="search-box" class="grid-cell"></div>
       <div id="lineplot" class="grid-cell"></div>
       <div id="bubblemap" class="grid-cell"></div>
