Fixing divs; changing titles

--- a/index.html
+++ b/index.html
@@ -28,15 +28,33 @@
   
 	<body>
     <h1 class="title" style="text-align:center" >Music Evolution</h1>
-    <div id ="selectbutton" name="genre"></div>
-    <section class="title" id="grid">
-      <div id="search-box" class="grid-cell"></div>
-      <div id="lineplot" class="grid-cell"></div>
-      <div id="bubblemap" class="grid-cell"></div>
-      <div id="lolipop" class="grid-cell"></div>
-      <div id="barchart" class="grid-cell"></div>
-      <div id="network" class="grid-cell"></div>
-      <div id="sankey" class="grid-cell"></div>
-    </section>
+    <!-- <div id ="selectbutton" name="genre"></div> -->
+    <!-- <section class="title" id="grid"> -->
+      <!-- <div id="search-box" class="grid-cell"></div> -->
+    <div class="first-container">
+      <div class="box">
+        <div class="box-row">
+          <div id="network" class="box-cell box1"></div>
+          <div id="lineplot" class="box-cell box2">
+            <p class="idiom-title"> Genre Evolution </p>
+          </div>
+          <div id="bubblemap" class="box-cell box3">
+            <p class="idiom-title"> World Map </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="first-container">
+      <div class="box">
+        <div class="box-row">
+          <div id="timeline" class="box-cell box1"></div>
+          <div id="barchart" class="box-cell box2">
+            <p class="idiom-title"> Most Popular Bands </p>
+          </div>
+          <div id="lolipop" class="box-cell box3"></div>
+        </div>
+      </div>
+    </div>
+      <!-- </section> -->
 	</body>
 </html>
