--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <div id="barchart" class="box-cell box2">
             <p class="idiom-title"> Most Popular Bands </p>
           </div>
-          <div id="lolipop" class="box-cell box3"></div>
+          <div id="lollipop" class="box-cell box3"></div>
         </div>
       </div>
     </div>
