--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script src="js/lineplot.js" type="module"></script>
     <script src="js/barchart.js" type="module"></script>
     <script src="js/bubblemap.js" type="module"></script>
+    <script src="js/lollipop.js" type="module"></script>
 
     <!--import font-->
     <style>
@@ -52,7 +53,9 @@
           <div id="barchart" class="box-cell box2">
             <p class="idiom-title"> Most Popular Bands </p>
           </div>
-          <div id="lollipop" class="box-cell box3"></div>
+          <div id="lollipop" class="box-cell box3">
+            <p class="idiom-title"> Birth dates </p>
+          </div>
         </div>
       </div>
     </div>
