--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <script src="D3/d3.js" charset="utf-8"></script>
     <!-- d3 topojson for map -->
     <script src="D3/topojson.js" charset="utf-8"></script>
+    <!-- d3 tooltip -->
+    <script src="D3/d3.tip.v0.6.3.js" charset="utf-8"></script>
 
     <!-- Our JS -->
     <script src="js/main.js" type="module"></script>
@@ -24,41 +26,42 @@
 
     <!--import font-->
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
     </style>
-	</head>
-  
-	<body>
-    <h1 class="title" style="text-align:center" >Music Evolution</h1>
+</head>
+
+<body>
+    <h1 class="title" style="text-align:center">Music Evolution</h1>
     <!-- <div id ="selectbutton" name="genre"></div> -->
     <!-- <section class="title" id="grid"> -->
-      <!-- <div id="search-box" class="grid-cell"></div> -->
+    <!-- <div id="search-box" class="grid-cell"></div> -->
     <div class="first-container">
-      <div class="box">
-        <div class="box-row">
-          <div id="network" class="box-cell box1"></div>
-          <div id="lineplot" class="box-cell box2">
-            <p class="idiom-title"> Genre Evolution </p>
-          </div>
-          <div id="bubblemap" class="box-cell box3">
-            <p class="idiom-title"> World Map </p>
-          </div>
+        <div class="box">
+            <div class="box-row">
+                <div id="network" class="box-cell box1"></div>
+                <div id="lineplot" class="box-cell box2">
+                    <p class="idiom-title"> Genre Evolution </p>
+                </div>
+                <div id="bubblemap" class="box-cell box3">
+                    <p class="idiom-title"> World Map </p>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
     <div class="first-container">
-      <div class="box">
-        <div class="box-row">
-          <div id="timeline" class="box-cell box1"></div>
-          <div id="barchart" class="box-cell box2">
-            <p class="idiom-title"> Most Popular Bands </p>
-          </div>
-          <div id="lollipop" class="box-cell box3">
-            <p class="idiom-title"> Birth dates </p>
-          </div>
+        <div class="box">
+            <div class="box-row">
+                <div id="timeline" class="box-cell box1"></div>
+                <div id="barchart" class="box-cell box2">
+                    <p class="idiom-title"> Most Popular Bands </p>
+                </div>
+                <div id="lollipop" class="box-cell box3">
+                    <p class="idiom-title"> Birth dates </p>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-      <!-- </section> -->
-	</body>
+    <!-- </section> -->
+</body>
+
 </html>
