--- a/index.html
+++ b/index.html
@@ -29,36 +29,29 @@
 	</head>
   
 	<body>
-    <h1 class="title" style="text-align:center" >Music Evolution</h1>
-    <!-- <div id ="selectbutton" name="genre"></div> -->
-    <!-- <section class="title" id="grid"> -->
-      <!-- <div id="search-box" class="grid-cell"></div> -->
-    <div class="first-container">
-      <div class="box">
-        <div class="box-row">
-          <div id="network" class="box-cell box1"></div>
-          <div id="lineplot" class="box-cell box2">
-            <p class="idiom-title"> Genre Evolution </p>
-          </div>
-          <div id="bubblemap" class="box-cell box3">
-            <p class="idiom-title"> World Map </p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="first-container">
-      <div class="box">
-        <div class="box-row">
-          <div id="timeline" class="box-cell box1"></div>
-          <div id="barchart" class="box-cell box2">
-            <p class="idiom-title"> Most Popular Bands </p>
-          </div>
-          <div id="lollipop" class="box-cell box3">
-            <p class="idiom-title"> Birth dates </p>
-          </div>
-        </div>
-      </div>
-    </div>
-      <!-- </section> -->
+		<h1 class="title" style="text-align:center" >Music Evolution</h1>
+		<div>
+			<span class="btn" id="reset">Reset</span>
+		</div>
+		<!-- <section class="grid-container"> -->
+			<div id="network" class="grid-cell" style="max-width: 600; float: left;">
+				<!-- <p class="idiom-title"> Associated Bands </p> -->
+			</div>
+			<div id="lineplot" class="grid-cell" style="max-width: 600; float: left;">
+				<p class="idiom-title"> Genre Evolution </p>
+			</div>
+			<div id="bubblemap" class="grid-cell" style="max-width: 600; float: left;">
+				<p class="idiom-title"> World Map </p>
+			</div>
+			<div id="timeline" class="grid-cell" style="max-width: 600; float: left;">
+				<!-- <p class="idiom-title"> Artist Timeline </p> -->
+			</div>
+			<div id="barchart" class="grid-cell" style="max-width: 600; float: left;">
+				<p class="idiom-title"> Most Popular Bands </p>
+			</div>
+			<div id="lollipop" class="grid-cell" style="max-width: 600; float: left;">
+				<p class="idiom-title"> Birth dates </p>
+			</div>
+		<!-- </section> -->
 	</body>
 </html>
