--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <script src="js/lineplot.js" type="module"></script>
     <script src="js/barchart.js" type="module"></script>
     <script src="js/bubblemap.js" type="module"></script>
-    <script src="js/lollipop.js" type="module"></script>
+	<script src="js/lollipop.js" type="module"></script>
+	<script src="js/network.js" type="module"></script>
 
     <!--import font-->
     <style>
@@ -28,7 +29,7 @@
     </style>
 	</head>
   
-	<body>
+	<body style="background-color:#241f2c;">
 		<h1 class="title" style="text-align:center" >Music Evolution</h1>
 		<div>
 			<span class="btn" id="reset">Reset</span>
