Added font offline

--- a/index.html
+++ b/index.html
@@ -1,34 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <title>Music Evolution</title>
-    <meta charset="utf-8">
-    <meta name="description" content="Group 06 - Music Evolution">
-    <meta name="author" content="Bernardo Faria, Samuel Vicente, Sofia Martins">
+	<head>
+		<title>Music Evolution</title>
+		<meta charset="utf-8">
+		<meta name="description" content="Group 06 - Music Evolution">
+		<meta name="author" content="Bernardo Faria, Samuel Vicente, Sofia Martins">
 
-    <link rel="shortcut icon" type="image/ico" href="img/favicon.ico" />
-    <link rel="stylesheet" href="style.css" />
+		<link rel="shortcut icon" type="image/ico" href="img/favicon.ico" />
+		<link rel="stylesheet" href="style.css" />
 
-    <!-- d3 js local run -->
-    <script src="D3/d3.js" charset="utf-8"></script>
-    <!-- d3 topojson for map -->
-    <script src="D3/topojson.js" charset="utf-8"></script>
+		<!-- d3 js local run -->
+		<script src="D3/d3.js" charset="utf-8"></script>
+		<!-- d3 topojson for map -->
+		<script src="D3/topojson.js" charset="utf-8"></script>
+		<!-- font -->
+		<link rel="stylesheet" href="monserrat.css" type="text/css"/>
 
-    <!-- Our JS -->
-    <script src="js/main.js" type="module"></script>
-    <script src="js/lineplot.js" type="module"></script>
-    <script src="js/barchart.js" type="module"></script>
-    <script src="js/bubblemap.js" type="module"></script>
-	<script src="js/lollipop.js" type="module"></script>
-	<script src="js/network.js" type="module"></script>
+		<!-- Our JS -->
+		<script src="js/main.js" type="module"></script>
+		<script src="js/lineplot.js" type="module"></script>
+		<script src="js/barchart.js" type="module"></script>
+		<script src="js/bubblemap.js" type="module"></script>
+		<script src="js/lollipop.js" type="module"></script>
+		<script src="js/network.js" type="module"></script>
+	</head>  
 
-    <!--import font-->
-    <style>
-      @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
-    </style>
-	</head>
-  
 	<body style="background-color:#241f2c;">
 		<h1 class="title" style="text-align:center" >Music Evolution</h1>
 		<div>
