Fixing lollipop values

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			<p class="idiom-title"> Genre Evolution </p>
 		</div>
 		<div id="bubblemap" class="grid-cell" style="max-width: 600; float: left;">
-			<p class="idiom-title"> World Map </p>
+			<p class="idiom-title"> World Map Birthplaces / Locations </p>
 		</div>
 		<div id="timeline" class="grid-cell" style="max-width: 600; float: left;">
 			<!-- <p class="idiom-title"> Artist Timeline </p> -->
@@ -48,7 +48,7 @@
 			<p class="idiom-title"> Most Popular Bands </p>
 		</div>
 		<div id="lollipop" class="grid-cell" style="max-width: 600; float: left;">
-			<p class="idiom-title"> Birth dates </p>
+			<p class="idiom-title"> Birth Dates </p>
 		</div>
 		<!-- </section> -->
 	</body>
