--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		</div>
 		<!-- <section class="grid-container"> -->
 		<div id="network" class="grid-cell" style="max-width: 600; float: left;">
-			<!-- <p class="idiom-title"> Associated Bands </p> -->
+			<p class="idiom-title"> Associated Bands </p>
 		</div>
 		<div id="lineplot" class="grid-cell" style="max-width: 600; float: left;">
 			<p class="idiom-title"> Genre Evolution </p>
