--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
 			<!-- <p class="idiom-title"> Artist Timeline </p> -->
 		</div>
 		<div id="barchart" class="grid-cell" style="max-width: 600; float: left;">
-			<p class="idiom-title"> Most Popular Bands </p>
+			<p class="idiom-title" style="transform: translateY(40px);"> Most Popular Bands </p>
 		</div>
 		<div id="lollipop" class="grid-cell" style="max-width: 600; float: left;">
-			<p class="idiom-title"> Birth Dates </p>
+			<p class="idiom-title" style="transform: translateY(40px);"> Birth Dates </p>
 		</div>
 		<!-- </section> -->
 	</body>
