debuf btn estupido lol webdev

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 		<meta name="author" content="Bernardo Faria, Samuel Vicente, Sofia Martins">
 
 		<link rel="shortcut icon" type="image/ico" href="img/favicon.ico" />
-		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="styles/style.css" />
 
 		<!-- d3 js local run -->
 		<script src="D3/d3.js" charset="utf-8"></script>
 		<!-- d3 topojson for map -->
 		<script src="D3/topojson.js" charset="utf-8"></script>
 		<!-- font -->
-		<link rel="stylesheet" href="monserrat.css" type="text/css"/>
+		<link rel="stylesheet" href="styles/monserrat.css" type="text/css"/>
 
 		<!-- Our JS -->
 		<script src="js/main.js" type="module"></script>
@@ -31,7 +31,9 @@
 		<!-- Main title -->
 		<h1 class="title" style="text-align:center" >Music Evolution</h1>
 		<!-- Reset button -->
-		<button class="btn" id="reset"> Reset </button>
+    <div>
+      <button class="btn" id="reset"> Reset </button>
+    </div>
 		<!-- Idioms -->
 		<div id="network" class="grid-cell" style="max-width: 600; float: left;">
 			<p class="idiom-title"> Tags Network </p>
