changed title barchart

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
 			<p class="idiom-title"> Genre Evolution </p>
 		</div>
 		<div id="bubblemap" class="grid-cell" style="max-width: 600; float: left;">
-			<p class="idiom-title"> World Map Birthplaces / Locations </p>
+			<p class="idiom-title"> World Map Origin Places </p>
 		</div>
 		<!-- <div id="timeline" class="grid-cell" style="max-width: 600; float: left;">
 			<p class="idiom-title"> Artist Timeline </p>
 		</div> -->
 		<div id="barchart" class="grid-cell" style="max-width: 600; float: left;">
-			<p class="idiom-title" style="transform: translateY(40px);"> Most Popular Bands </p>
+			<p class="idiom-title" style="transform: translateY(40px);"> Top 5 Artists </p>
 		</div>
 		<div id="lollipop" class="grid-cell" style="max-width: 600; float: left;">
 			<p class="idiom-title" style="transform: translateY(40px);"> Birth Dates </p>
