changed title barchart

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			<p class="idiom-title"> Artist Timeline </p>
 		</div> -->
 		<div id="barchart" class="grid-cell" style="max-width: 600; float: left;">
-			<p class="idiom-title" style="transform: translateY(40px);"> Top 5 Artists </p>
+			<p class="idiom-title" style="transform: translateY(40px);">Most Popular Artists</p>
 		</div>
 		<div id="lollipop" class="grid-cell" style="max-width: 600; float: left;">
 			<p class="idiom-title" style="transform: translateY(40px);"> Birth Dates </p>
